--- a/style/style.css
+++ b/style/style.css
@@ -119,8 +119,8 @@ body {
   top: 5vw;}
   95% {left: 75%;
   top: 50px;}
-  100% {left: 100%;
-  top: 100px;}
+  100% {left: 90%;
+  top: -100px;}
 }
 @keyframes fly {
   0% {left: -200px;
@@ -151,8 +151,8 @@ body {
   top: 5vw;}
   95% {left: 75%;
   top: 50px;}
-  100% {left: 100%;
-  top: 100px;}
+  100% {left: 90%;
+  top: -100px;}
 }
 /* Slide in textboxes */
 @-webkit-keyframes slide1 {
@@ -278,10 +278,12 @@ body {
     -webkit-animation: slide1 1s ease backwards 5s;
             animation: slide1 1s ease backwards 5s;
   }
+/*
   .textbox1:hover {
     -webkit-filter: invert(100%);
             filter: invert(100%);
    }
+*/
   .bubble1 {
     position: absolute;
     width: 25%;
@@ -310,10 +312,12 @@ body {
     -webkit-animation: slide1 1s ease backwards 5.5s;
             animation: slide1 1s ease backwards 5.5s;
   }
+/*
   .textbox2:hover {
     -webkit-filter: invert(100%);
             filter: invert(100%);
   }
+*/
   .bubble2 {
     position: absolute;
     height: auto;
@@ -343,10 +347,12 @@ body {
     -webkit-animation: slide1 1s ease backwards 6s;
             animation: slide1 1s ease backwards 6s;
   }
+/*
   .textbox3:hover {
     -webkit-filter: invert(100%);
             filter: invert(100%);
   }
+*/
   .bubble3 {
     position: absolute;
     height: auto;
@@ -378,10 +384,12 @@ body {
 
 
   }
+/*
   .textbox4:hover {
     -webkit-filter: invert(100%);
             filter: invert(100%);
    }
+*/
   .bubble4 {
     position: absolute;
     width: 24%;
@@ -411,10 +419,12 @@ body {
 
 
   }
+/*
   .textbox5:hover {
     -webkit-filter: invert(100%);
             filter: invert(100%);
    }
+*/
   .bubble5 {
     position: absolute;
     width: 30%;
@@ -447,10 +457,12 @@ body {
 
 
   }
+/*
   .textbox6:hover {
     -webkit-filter: invert(100%);
             filter: invert(100%);
   }
+*/
   .bubble6 {
     position: absolute;
     height: auto;
@@ -650,6 +662,7 @@ body {
         left: 60%;
         font-size: 5vw;
       }
+      
       @-webkit-keyframes fly {
       0% {left: -200px;
       top: 200px;}
@@ -679,9 +692,10 @@ body {
       top: 50px;}
       95% {left: 75%;
       top: 50px;}
-      100% {left: 100%;
-      top: 100px;}
+      100% {left: 90%;
+      top: -100px;}
       }
+      
       @keyframes fly {
       0% {left: -200px;
       top: 200px;}
@@ -711,7 +725,7 @@ body {
       top: 50px;}
       95% {left: 75%;
       top: 50px;}
-      100% {left: 100%;
-      top: 100px;}
+      100% {left: 90%;
+      top: -100px;}
       }
 }
